--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -14,7 +14,8 @@
   color: #3772ff;
 }
 .slogan {
-  font-size: 32px;
+  font-family: 'Jost', sans-serif;
+  font-size: 30px;
   font-weight: 500;
   margin: 20px 0;
 }
@@ -84,6 +85,7 @@
     width: 350px;
   }
   .slogan {
+    
     font-size: 24px;
   }
   .designation {
