--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -47,6 +47,7 @@
 
 .detailsParagraph {
   font-size: 25px;
+  font-family: 'Jost', sans-serif;
   width: 70%;
 }
 
