--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -34,7 +34,7 @@
   background-color: #d7f1ff;
   width: 75%;
   flex-wrap: wrap;
-  padding: 90px 140px;
+  padding: 65px 140px;
   border-radius: 45px 0px 0px 45px;
   justify-content: space-around;
 }
@@ -70,11 +70,12 @@
 }
 
 .listItems {
-  padding: 20px 40px;
+  padding: 20px 35px;
 }
 
 .listItems li {
-  font-size: 22px;
+  font-size: 20px;
+  font-family: 'Jost', sans-serif;
 }
 
 @media screen and (max-width: 1250px) {
